fix: jump content at open modal

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,11 +2,17 @@
 @import './variables';
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
+html,
+body {
+  scrollbar-gutter: stable;
+}
+
 * {
     font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overscroll-behavior: contain;
  
 }
 
